src/objects/LG_EnvironmentVariables__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Storage of system variables and hard-coded IDs.</description>
    <fields>
        <fullName>IdFIeld_PostalCity__c</fullName>
        <description>ID of Opportunity field called Postal City.
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdFIeld Postal City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_BillingCity__c</fullName>
        <description>ID of Opportunity field called Billing City. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Billing City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_BillingCountry__c</fullName>
        <description>ID of Opportunity field called Billing Country. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Billing Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_BillingHouseNumberExtension__c</fullName>
        <description>ID of Opportunity field called Billing House Number Extension. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Billing House Number Extension</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_BillingHouseNumber__c</fullName>
        <description>ID of Opportunity field called Billing House Number. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Billing House Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_BillingPostalCode__c</fullName>
        <description>ID of Opportunity field called Billing Postal Code. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Billing Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_BillingStreet__c</fullName>
        <description>ID of Opportunity field called Billing Street.
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Billing Street</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_InstallationCity__c</fullName>
        <description>ID of Opportunity field called Installation City. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Installation City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_InstallationCountry__c</fullName>
        <description>ID of Opportunity field called Installation Country. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Installation Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_InstallationHouseNumberExtension__c</fullName>
        <description>ID of Opportunity field called Installation House Number Extension.
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Installation House Number Ext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_InstallationHouseNumber__c</fullName>
        <description>ID of Opportunity field called Installation House Number. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Installation House Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_InstallationPostalCode__c</fullName>
        <description>ID of Opportunity field called Installation Postal Code. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Installation Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_Installation_Street__c</fullName>
        <description>ID of Opportunity field called Installation Street. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Installation Street</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_PostalCode__c</fullName>
        <description>ID of Opportunity field called Postal Code. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_PostalCountry__c</fullName>
        <description>ID of Opportunity field called Postal Country. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Postal Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_PostalHouseNumberExt__c</fullName>
        <description>ID of Opportunity field called Postal House Number Extension. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Postal House Number Ext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_PostalHouseNumber__c</fullName>
        <description>ID of Opportunity field called Postal House Number. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Postal House Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdField_PostalStreet__c</fullName>
        <description>ID of Opportunity field called Postal Street. 
Used in &apos;Create New Opportunity&apos; button</description>
        <label>IdField Postal Street</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddressSearchLocal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox if you address search is needs to happen on Local Salesforce object</description>
        <label>Address Search Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Admin_Emails__c</fullName>
        <label>Admin Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CloudSenceAnywhereIconID__c</fullName>
        <description>Document ID for &apos;Open Cloudsense Anywhere&apos; icon displayed on D2D page layouts.</description>
        <label>CloudSence Anywhere Icon ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaQueryID10__c</fullName>
        <label>CongaQueryID10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaQueryID11__c</fullName>
        <label>CongaQueryID11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaQueryID1__c</fullName>
        <description>ID of Conga Query that show only Product Line items of Type = &apos;Recurring&apos; or &apos;One Off&apos;.</description>
        <label>CongaQueryID1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaTemplateID__c</fullName>
        <description>ID of Conga Template which is used in Create Quote button</description>
        <label>CongaTemplateID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderEmailAddressA__c</fullName>
        <label>Order Email Address A</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_OrderEmailAddressB__c</fullName>
        <label>Order Email Address B</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_OrderEmailAddressC__c</fullName>
        <label>Order Email Address C</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_OrderEmailAddressD__c</fullName>
        <label>Order Email Address D</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_PealAddressServiceURL__c</fullName>
        <description>This field is being used in the Address check service to retrieve the endpoint URL of the related service</description>
        <label>Peal Address Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SalesforceBaseURL__c</fullName>
        <label>Salesforce Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LG_SalesforcePartnerBaseURL__c</fullName>
        <label>Salesforce Partner Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LG_SandboxInstance__c</fullName>
        <description>Holds the name of sandbox instance, i.e. dev, JIT, UAT...</description>
        <label>Sandbox Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceAvailabilityIconID__c</fullName>
        <description>Document ID for Service Availability icon displayed on D2D page layouts.</description>
        <label>Service Availability Icon ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TracyAppURL__c</fullName>
        <description>Holds the URL of the Tracy application. Used while entering new numbers for embedding the Tracy App screen.</description>
        <label>Tracy App URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LG_VisualForceBaseURL__c</fullName>
        <label>VisualForce Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LG_VisualForcePartnerBaseURL__c</fullName>
        <label>Visual Force Partner Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UM_CongaTemplateId02__c</fullName>
        <label>CongaTemplateId02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CongaTemplateId03__c</fullName>
        <label>UM_CongaTemplateId03</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ProductInterestCOAXEmail__c</fullName>
        <description>Contains email address of the team to which an email is to be sent when a product interest on lead has Internet in Product value</description>
        <label>Product Interest COAX Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UM_ProductInterestFiberEmail__c</fullName>
        <description>Contains email address of the team to which an email is to be sent when a product interest on lead has Fiber in Product value</description>
        <label>Product Interest Fiber Email</label>
        <type>Email</type>
    </fields>
    <label>Environment Variables</label>
</CustomObject>